BUG#53889: slaves stops with 1032; handler error HA_ERR_KEY_NOT_FOUND

At the slave, while searching for the correct row to update, the
index init function (ha_index_init) was initializing always the
0th index, even if some other nth index was set to be used.

We fix this by setting the correct parameter (key) when calling
the index initialization function.

Apart from fixing the bug, we also improve the index lookup
routine to distinguish unique indexes that have null parts from
those that don't.